<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/weightTextBsa"
        android:layout_width="match_parent"
        android:layout_height="56dp">
        <EditText
            android:id="@+id/editWeightBsa"
            android:hint="@string/weight_in_kgs"
            android:focusableInTouchMode="true"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/heightTextBsa"
        android:layout_below="@id/weightTextBsa"
        android:layout_marginTop="8dp"
        android:layout_height="56dp">
        <EditText
            android:id="@+id/editHeightBsa"
            android:inputType="numberDecimal"
            android:hint="@string/height_in_cms"
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/BsaCalculateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/heightTextBsa"
        android:layout_marginTop="24dp"
        android:text="@string/calculate"
        android:textColor="@color/cardview_light_background"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:background="@drawable/button_background"
        android:elevation="4sp"/>

    <TextView
        android:id="@+id/BsaTextShow"
        android:text="@string/bsa_info"
        android:textSize="@dimen/infoSize"
        android:textAlignment="center"
        android:layout_below="@id/BsaCalculateButton"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="24dp"
        android:layout_height="wrap_content" />
    </RelativeLayout>
</ScrollView>
