<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/dataCardView"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        app:cardElevation="2dp"
        android:layout_margin="4dp"
        app:cardCornerRadius="4dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ImageView"
                android:layout_width="84dp"
                android:layout_height="84dp"
                android:layout_gravity="center"
                android:background="@drawable/bmi"
                android:padding="12dp"
                android:scaleType="centerInside"
                android:contentDescription="@string/recycleritem" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:padding="12dp"
                android:layout_height="match_parent">

        <TextView
            android:id="@+id/HeadText"
            android:layout_weight="1"
            android:textSize="24sp"
            android:text="@string/bmi_calculator"
            android:layout_width="wrap_content"
            android:layout_height="0dp" />
        <TextView
            android:id="@+id/descriptionText"
            android:layout_weight="1"
            android:text="@string/bmi_full"
            android:textSize="@dimen/descriptionTextSize"
            android:layout_width="wrap_content"
            android:layout_height="0dp" />
                </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>